--- a/css/main.css
+++ b/css/main.css
@@ -120,8 +120,7 @@ header nav ul li a {
 .section-one,
 .section-two,
 .section-three {
-	box-sizing: border-box;
-	padding: 0 40px;
+	box-sizing: border-box;	
 }
 
 .section-one {
@@ -132,8 +131,8 @@ header nav ul li a {
 .section-two {
 	/**width: 42%;**/
 	width: 100%;
-	border-left: 5px solid #EEE;
-	border-right: 5px solid #EEE;
+	border-top: 5px solid #EEE;
+	border-bottom: 5px solid #EEE;
 }
 
 .section-three {
@@ -169,4 +168,60 @@ footer span {
 	text-transform: lowercase;
 	color: #45610E;
 	font-size: .875rem;
+}
+
+@media all and (min-width: 768px) {
+	/* Tablet styles here */
+	.bottom-section .content-wrapper {
+		justify-content: space-evenly;
+	}
+	
+	.section-one {
+		/**width: 29%;**/
+		width: 26%;
+	}
+	
+	.section-two {
+		/**width: 42%;**/
+		width: 40%;
+		border-left: 5px solid #EEE;
+		border-right: 5px solid #EEE;
+		padding: 0 30px;
+		border-top: none;
+		border-bottom: none;
+	}
+	
+	.section-three {
+		/**width: 29%;**/
+		width: 26%;
+	}
+}
+
+@media all and (min-width:1200px) {
+	/* Desktop styles here */
+	body {
+		font-size: 1em;
+	}
+
+	header .content-wrapper {
+		justify-content: space-between;
+		align-items: center;
+		padding: 20px 0;
+	}
+
+	header h1 {
+		padding: 0;
+		border-bottom: none;
+		width: 30%;
+		text-align: left;
+	}
+
+	header nav {
+		width: 21%;
+	}
+	
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
 }
